--- a/index.html
+++ b/index.html
@@ -1,3 +1,63 @@
-Hello world! <br>
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<meta name="format-detection" content="telephone=no" />
+<title>Search</title>
+<style type="text/css">
+<!--
+-->
+</style>
+<link rel="stylesheet" href="css/main.css" type="text/css" />
+<link rel="stylesheet" href="css/link-dotted.css" type="text/css" />
+<script type="text/javascript" src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.min.js"></script>
+<script type="text/javascript" src="jquery/jquery-cookie/jquery.cookie.js"></script>
+<script type="text/javascript" src="javascript/WMfunctions.jsp"></script>
+<script>
+$.extend({aas:function(word,page){
+    $("#results").text("");
+    $.get("servlet/search.php?word="+word+"&page="+page,function(data,status){
+        var obj = jQuery.parseJSON(data);
+        if(obj.length==0) alert('Nothing found! ')
+        for($i=0;$i<obj.length;$i++){
+            $('<div id="wordEntry'+$i+'" class="wordEntry"></div>').appendTo('#results');
+            $('<div id="word'+$i+'"><a href="word.html?word='+obj[$i].word+'">'+obj[$i].word+'</a></div>').appendTo('#wordEntry'+$i);
+            $('<div id="desc'+$i+'">'+obj[$i].desc+'</div>').appendTo('#wordEntry'+$i);
+        }
+    });
+}});
+$(document).ready(function(){
+    $user=$.cookie('dict-user');
+    if(typeof($user)!="undefined"){
+        $("#user").text($user);
+        $("#user").attr("style","color:black; ");
+    }
+    $("#results").text("");
+    $("#submit").click(function(){
+        $.aas($('#text').val(),0);
+    });
+});
+</script>
+</head>
+<body>
+<div class="" style="font-size:1em; ">
+<span id='user' style="color:gray; ">none</span>
+&nbsp;&nbsp;<a href="login.html">登录</a>
+&nbsp;&nbsp;<a href="recite.html">签到加单词</a>
+&nbsp;&nbsp;<a href="recite.html">背单词</a>
+&nbsp;&nbsp;<a href="">FGW</a>
+</div>
+<h2>
+<input type="text" id="text" style="height:1em; width:8em; font-size:1em" checked>
+<input type="button" id="submit" style="height:1.5em; font-size:1em" value="Search">
+</h2>
+<div class="style1 style_text" id="results">
+__RESULTS__
+</div>
+</body>
+</html>
 
-This is the HTML page. <br>
